# freqfit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml  python-app.yml
docs/: Makefile  toys.drawio
docs/source/: conf.py
examples/: example_plotting_notebook.ipynb
src/: limit.py
src/freqfit/: __init__.py  constraints.py  dataset.py  experiment.py  fc.py  guess.py  initial_guesses.py  model.py  parameters.py  plot.py  statistics.py  superset.py  toy.py  utils.py  workspace.py
src/freqfit/guesses/: initial_guess_0vbb.py
src/freqfit/models/: __init__.py  correlated_efficiency_0vbb.py  correlated_efficiency_0vbb_correlate_delta.py  correlated_efficiency_0vbb_exponential_background.py  correlated_efficiency_0vbb_exponential_with_offset_background.py  correlated_efficiency_0vbb_linear_background.py  correlated_efficiency_NME_0vbb.py  gaussian_on_uniform.py  linear_bkg.py  mjd_0vbb.py  onebin_poisson.py
src/legendfreqfit/: __init__.py  constants.py  dataset.py  experiment.py  initial_guesses.py  limit.py  logging.py  plot.py  pseudoexperiment.py  statistics.py  superset.py  toy.py  utils.py
src/legendfreqfit/models/: 0vbb_correlated_efficieny.py  OLD_bkg_region_0vbb.py  __init__.py  bkg_region_0vbb.py  box_model_0vbb.py  constants.py  correlated_efficiency_0vbb.py  correlated_efficiency_0vbb_correlate_delta.py  correlated_efficiency_0vbb_exponential_background.py  correlated_efficiency_0vbb_exponential_with_offset_background.py  correlated_efficiency_0vbb_linear_background.py  correlated_efficiency_0vbb_sigma_scaled.py  correlated_efficiency_NME_0vbb.py  gaussian_on_uniform.py  linear_bkg.py  mjd_0vbb.py  mjd_NME_0vbb.py  number_of_counts_0vbb.py  onebin_poisson.py  sig_region_0vbb.py  truncated_correlated_efficiency_0vbb.py
submission/: l200_brazil.py  l200_s_grid.py  l200_toys.py
tests/: FC_config.yaml  config_refactor_test.yaml  config_test.yaml  config_test_highbkg.yaml  config_test_highbkg_bkg_only.yaml  config_test_highsignal.yaml  test_constraints.py  test_criticalts.py  test_dataset.py  test_feldman_cousins.py  test_parameters.py  test_statistics.py
tests/models/: test_gaussian_on_uniform.py
